3D Manipulator not refreshing when switching pivot #55069

Closed
opened 2018-05-15 12:34:31 +02:00 by Dalai Felinto · 3 comments

Blender Version
Broken: 55b241d32a (blender2.8 HEAD)
Worked: 2.79a

Short description of error
Changing Pivot (. ,) not updating the transform manipulator.

Exact steps for others to reproduce the error
*Select the Lamp

  • Enable Move Tool
  • Select Lamp
  • Switch pivot from Active to 3D Cursor (.)
  • The manipulator is only updated when you force an update (e.g., select another object or LMB in the viewport to move the 3d cursor).
**Blender Version** Broken: 55b241d32a (blender2.8 HEAD) Worked: 2.79a **Short description of error** Changing Pivot (`.` `,`) not updating the transform manipulator. **Exact steps for others to reproduce the error** *Select the Lamp * Enable Move Tool * Select Lamp * Switch pivot from Active to 3D Cursor (.) * The manipulator is only updated when you force an update (e.g., select another object or LMB in the viewport to move the 3d cursor).
Campbell Barton was assigned by Dalai Felinto 2018-05-15 12:34:31 +02:00
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto

This issue was referenced by ab19609233

This issue was referenced by ab196092332e1108b220e1c0c3499f581ee694ae

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55069
No description provided.