Fix T55069: 3D widget misses pivot-point refresh